2006-04-18  Björn Lindqvist  <bjourne@gmail.com>

	* makefile.am: Add boxes.{c,h} to libmetacity_private
	* src/theme-parser.c (check_expression):
	* src/theme-viewer.c (run_position_expression_tests):
	Use meta_rect ().

	* src/theme.c: Replace while loops iterating over sequences with
	for loops.

	* src/theme.c, src/theme.h (struct _MetaPositionExprEnv,
	meta_draw_op_draw, meta_draw_op_list_draw,
	meta_theme_draw_menu_icon): Use MetaRectangles in function
	prototypes instead of x, y, with, height ints where applicable.

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2004-04-17  Thomas Thurman <thomas@thurman.org.uk>

	* keybindings.c (count_bindings, rebuild_binding_table):
	* prefs.c (change_notify, screen_bindings,
	window_bindings, init_bindings, update_binding,
	find_and_update_list_binding, update_list_binding,
	meta_prefs_get_window_binding): Allow any keybinding pref
	to be specified either with <foo>, a string, or <foo>_list,
	a list of strings, or both. Fixes #164831.

2006-04-16  Elijah Newren  <newren gmail com>

	Patch from Dan Sanders to fix #334899.

	* window.c (meta_window_new_with_attrs): Unminimize ancestors of
	new windows when mapped; this prevents e.g. confirmation windows
	from causing applications to appear locked when closing via the
	window list.

2006-04-15  Elijah Newren  <newren gmail com>

	Patch from Dan Sanders to fix #335076.

	* src/core.c (meta_core_maximize, meta_core_toggle_maximize,
	  meta_core_unmaximize):
	* src/window.c (meta_window_client_message):
	Raise windows on maximize/unmaximize.

2006-04-15  Elijah Newren  <newren gmail com>

	* src/display.h: Patch from Andy Morum to fix the build with
	--disable-xsync.  #336605

2006-04-14  Elijah Newren  <newren gmail com>

	* HACKING: Include instructions on setting up a minimal
	building/testing environment

2006-04-14  Thomas Thurman   <thomas@thurman.org.uk>
